# HarmonyScape

./: .gitignore  HarmonyScape_Attack_Envelope_Fix.md  HarmonyScape_Build_Deploy_Guide.md  HarmonyScape_ChordEngine_Algorithm.md  HarmonyScape_Current_State_Analysis.md  HarmonyScape_Envelope_Complete_Fix.md  HarmonyScape_Harmonic_Enhancement_Notes.md  HarmonyScape_JUCE_Setup.md  HarmonyScape_Master_Ribbon_Controls.md  HarmonyScape_Project_Document.md  HarmonyScape_Ribbons_Implementation.md  HarmonyScape_UI_Design.md  README_BUILD_DEPLOY.md
.cursor/rules/: guidlines.mdc
HarmonyScape/: CMakeLists.txt
HarmonyScape/JUCE/DemoRunner.app/Contents/: CodeResources  Info.plist
HarmonyScape/JUCE/DemoRunner.app/Contents/_CodeSignature/: CodeResources
HarmonyScape/JUCE/Projucer.app/Contents/: CodeResources  Info.plist
HarmonyScape/Source/: JuceHeader.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  Version.h  Voice.h
HarmonyScape/Source/ChordEngine/: ChordEngine.cpp  ChordEngine.h
HarmonyScape/Source/RibbonEngine/: RibbonEngine.cpp  RibbonEngine.h
HarmonyScape/Source/SpatialEngine/: SpatialEngine.cpp  SpatialEngine.h
